--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<div><span><img src = \"https://CCB-EDI.lenovo.com.cn/lmsedi/EDI/Details/L0000000HJ_660_0_Details.jpg\"/><span><br/></div>
+<div><span><img src="https://CCB-EDI.lenovo.com.cn/lmsedi/EDI/Details/L0000000HJ_660_0_Details.jpg"/><span><br/></div>
